Fix padding on mobile size devices.

--- a/_assets/stylesheets/app.sass
+++ b/_assets/stylesheets/app.sass
@@ -55,6 +55,10 @@ a
   margin: 0 auto
   padding: 20px 60px
   background: $site-secondary
+  
+@media screen and (max-width: 768px)
+  .content-main
+    padding: 20px
 
 .post-list
   margin: 2em auto
